resources/assets/scss/_orders.scss
  .slide-right-fixed{
    .fa-ellipsis-v{
        font-size:22px;
    }
  }
  @media (min-width: 320px) and (max-width: 767.98px) {
    .slide-right-fixed{
        position: fixed;
        background: #fff;
        right: -1000px;
        top: 74px;
        transition: all 0.5s ease;
        z-index: 999;
        .product-detail{
           width: 75%;
        }
    }
    .slide-right-fixed.active{
        right: 0px;
        position: absolute;
        top: 73px;
        padding-top: 20px;

    }
    #kss_shipment{
        .kss_product_list{
            width: 100% !important;
        }
        .product-detail{
            width: 75% !important;
        }
        .card-body {
            padding: .7rem;
        }
    }
}


.cd-cart-items {
    .dropdown{
        position: absolute;
        right: 12px;
        top: 12px;
        .fa-ellipsis-v{
          font-size:22px;
        }
    }
    .product-name{
        width: 350px;
        @media (min-width: 320px) and (max-width: 767.98px) {
            width: 180px
        }
       @media (min-width: 768px) and (max-width: 991.98px) {
            width: 190px;
        }
    }
}

.status-progress-wrap{
    display: flex;
    margin: 22px auto;
    padding: 18px 0 0;
    position: relative;
}
.status-progress-bar-wrap{
  position:absolute;
  width:100%;
  top:0px;
  height:4px;
  background:#dfdfdf;
  border-radius:10px;
}
.status-progress-bar{
  background: #4CAF50;
  height:100%;
  width:10%;
  border-radius:10px;
  display:inline-flex;
  vertical-align:top;
  justify-content:flex-end;
  transition:width 1s linear ;
}
.status-wrap{
  display:inline-flex;
  flex-direction: column;
  background:#fff;
  width:25%;
  align-items: center;
  position:relative;
}
.status-wrap span{
  color:#ddd;
  transition:all ease 0.25s;
}
.status-wrap:hover span{
  color:#03A9F4;
  transition:all ease 0.3s;
}
.status-wrap::after{
  content:"";
  width:10px;
  height:10px;
  margin-top:-21px;
  background: #dfdfdf;
  display:inline-block;
  vertical-align:top;
  transform: scale(1.25);
  transform-origin:center;
  border-radius:50%;
  position:absolute;
  top:0;
}

.status-wrap::before{
  content:"";
  width:10px;
  height:10px;
  margin-top:-21px;
  background: #4caf50;
  display:inline-block;
  vertical-align:top;
  transform: scale(0);
  transform-origin:center;
  border-radius:50%;
  position:absolute;
  top:0;
  z-index:2;
  transition:all ease .7s;
}
.status-wrap.active::before{
  transform: scale(1.25);
   transition:all ease .7s; 
}
.status-wrap.active::after{
  display:none !important;
}

.status-wrap:nth-child(2){
  align-items: flex-start;
}
.status-wrap:last-child{
  align-items: flex-end;
}

